--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    html {
+        font-family: "Inter", system-ui, sans-serif;
+    }
+}
+
 * {
     box-sizing: border-box;
     margin: 0 0;
