feat: Update content

--- a/style.css
+++ b/style.css
@@ -36,5 +36,5 @@ body {
 }
 
 .content-1 {
-    background: url("/bg-content-1.png") no-repeat top;
+    background: url("/images/background/bg-content-1.png") no-repeat top;
 }
