feat: Update content

--- a/components/vi/content-2.html
+++ b/components/vi/content-2.html
@@ -1,5 +1,5 @@
 <section class="bg-light-blue w-screen ">
-    <div class="mx-auto container px-5  text-content py-10 lg:pt-20 lg:pb-32 lg:px-0">
+    <div class="mx-auto container px-5 text-content py-10 lg:pt-20 lg:pb-32 xl:px-0">
         <h2 class="text-center font-heading font-bold text-2xl xl:text-5xl xl:leading-normal">Tính năng nổi bật</h2>
         <div class="grid grid-cols-4 gap-x-3 gap-y-8 mt-6 md:grid-cols-6 md:gap-x-8 md:gap-y-6 md:mt-10 lg:mt-14 lg:grid-cols-9 lg:gap-x-10 lg:gap-y-8">
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
@@ -8,7 +8,7 @@
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M35.2175 19.9165L28.8729 28.1031C28.3679 28.7639 27.4898 28.9373 26.7872 28.5641L26.5896 28.4346L20.3328 23.7343L14.8224 30.8276C14.515 31.2425 14.0342 31.5081 13.5271 31.4862C13.1539 31.4862 12.8246 31.3545 12.5172 31.1569C11.8586 30.6717 11.683 29.7716 12.0562 29.0713L12.1901 28.8737L18.6862 20.4192C18.9519 20.068 19.3471 19.8287 19.7839 19.7628C20.223 19.7167 20.6621 19.8287 21.0353 20.1141L27.1187 24.9L32.4294 18.0285C32.7828 17.5455 33.3734 17.282 33.9684 17.3479C34.537 17.3918 35.066 17.765 35.3053 18.3139C35.5468 18.8627 35.481 19.4774 35.1297 19.9604L35.2175 19.9165Z" fill="white"/>
                     <rect x="36" width="10" height="10" rx="5" fill="#F9B255"/>
                     <linearGradient id="paint0_linear_54_849" x1="23.9669" y1="4" x2="23.9669" y2="59.5556" gradientUnits="userSpaceOnUse">
-                        <stop stop-color="#4EEE97"/>
+                        <stop stop-color="#4EEE97" offset=""/>
                         <stop offset="1" stop-color="#33B365"/>
                     </linearGradient>
                 </svg>
@@ -48,7 +48,7 @@
                     <path d="M24.1523 18.4615V3.69231C24.1523 1.65231 25.8047 0 27.8447 0H42.6139C44.6539 0 46.3062 1.65231 46.3062 3.69231V11.0769C46.3062 13.1169 44.6539 14.7692 42.6139 14.7692H31.537L25.6293 19.2C25.02 19.656 24.1523 19.2222 24.1523 18.4615Z" fill="#5880E4"/>
                     <path d="M26.9602 36H13.0398C13.0398 36 12.0454 44 20 44C27.9546 44 26.9602 36 26.9602 36Z" fill="#011E67"/>
                     <linearGradient id="paint0_linear_54_887" x1="20.4615" y1="18.4609" x2="20.4615" y2="47.9994" gradientUnits="userSpaceOnUse">
-                        <stop stop-color="#78E7FC"/>
+                        <stop stop-color="#78E7FC" offset=""/>
                         <stop offset="1" stop-color="#5CD1F7"/>
                     </linearGradient>
                 </svg>
@@ -59,7 +59,7 @@
                     <path d="M32.6802 3.99976H15.3402C8.56024 3.99976 4.00024 8.75976 4.00024 15.8398V32.1818C4.00024 39.2398 8.56024 43.9998 15.3402 43.9998H32.6802C39.4602 43.9998 44.0002 39.2398 44.0002 32.1818V15.8398C44.0002 8.75976 39.4602 3.99976 32.6802 3.99976Z" fill="url(#paint0_linear_54_896)"/>
                     <path d="M34.3675 19.6828L22.5862 31.3841C22.1646 31.8029 21.6189 32 21.0485 32C20.5028 32 19.9572 31.8029 19.5355 31.3841L13.6325 25.5458C12.7892 24.6836 12.7892 23.3287 13.6325 22.4911C14.4758 21.6536 15.8647 21.6536 16.708 22.4911L21.0485 26.8022L31.292 16.6282C32.1353 15.7906 33.5242 15.7906 34.3675 16.6282C35.2108 17.4904 35.2108 18.8453 34.3675 19.6828Z" fill="#5100B3"/>
                     <linearGradient id="paint0_linear_54_896" x1="53" y1="-9.00006" x2="24.0002" y2="43.9998" gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#EADDFF"/>
+                            <stop stop-color="#EADDFF" offset=""/>
                             <stop offset="1" stop-color="#C4A4F4"/>
                     </linearGradient>
                     </svg>
@@ -80,7 +80,7 @@
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M24.3333 45.9998C34.4586 45.9998 42.6667 37.7917 42.6667 27.6665C42.6667 17.5412 34.4586 9.33313 24.3333 9.33313C14.2081 9.33313 6 17.5412 6 27.6665C6 37.7917 14.2081 45.9998 24.3333 45.9998ZM24.3337 38.6675C30.4088 38.6675 35.3337 33.7426 35.3337 27.6675C35.3337 21.5924 30.4088 16.6675 24.3337 16.6675C18.2586 16.6675 13.3337 21.5924 13.3337 27.6675C13.3337 33.7426 18.2586 38.6675 24.3337 38.6675Z" fill="url(#paint0_linear_54_917)"/>
                     <path d="M23.6236 19.9926C23.872 19.4691 24.5655 19.4691 24.8139 19.9926L26.54 23.6295C26.6392 23.8385 26.8265 23.9824 27.0419 24.0151L30.8614 24.5958C31.4173 24.6803 31.635 25.4216 31.2258 25.8362L28.495 28.6025C28.3302 28.7694 28.2547 29.0148 28.2943 29.2549L28.9429 33.188C29.0396 33.7739 28.4742 34.227 27.9822 33.958L24.5211 32.0649C24.331 31.9609 24.1065 31.9609 23.9164 32.0649L20.4553 33.958C19.9633 34.227 19.3979 33.7739 19.4946 33.188L20.1432 29.2549C20.1828 29.0148 20.1073 28.7694 19.9425 28.6025L17.2117 25.8362C16.8025 25.4216 17.0202 24.6803 17.5761 24.5958L21.3956 24.0151C21.6111 23.9824 21.7983 23.8385 21.8975 23.6295L23.6236 19.9926Z" fill="#002F13"/>
                     <linearGradient id="paint0_linear_54_917" x1="24.3333" y1="9.33313" x2="24.3333" y2="45.9998" gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#46E987"/>
+                            <stop stop-color="#46E987" offset=""/>
                             <stop offset="1" stop-color="#30A960"/>
                     </linearGradient>
                 </svg>
@@ -92,7 +92,7 @@
                     <path d="M43.1006 23.9992H27.2673C27.0217 23.9678 26.7726 24.0182 26.5584 24.1424C26.3442 24.2666 26.1768 24.4579 26.082 24.6866C25.9872 24.9154 25.9703 25.169 26.034 25.4083C26.0976 25.6476 26.2381 25.8593 26.434 26.0109L37.6306 37.2075C37.7869 37.3637 37.9988 37.4515 38.2198 37.4515C38.4407 37.4515 38.6526 37.3637 38.8089 37.2075C40.4389 35.586 41.7311 33.6574 42.6108 31.5333C43.4905 29.4091 43.9402 27.1316 43.9339 24.8325C43.9339 24.6115 43.8461 24.3996 43.6898 24.2433C43.5335 24.087 43.3216 23.9992 43.1006 23.9992Z" fill="#F45734"/>
                     <path d="M21.5809 43.9992C23.8579 43.9944 26.1113 43.5375 28.2104 42.6552C30.3095 41.7729 32.2125 40.4826 33.8092 38.8593C33.9654 38.703 34.0532 38.4911 34.0532 38.2701C34.0532 38.0491 33.9654 37.8372 33.8092 37.6809L22.6126 26.4843C22.4157 26.2479 22.2954 25.9573 22.2676 25.651V9.81771C22.2676 9.59669 22.1798 9.38473 22.0235 9.22845C21.8672 9.07217 21.6553 8.98438 21.4343 8.98438C16.791 9.00382 12.3456 10.867 9.07611 14.164C5.80658 17.4611 3.9807 21.9219 4.00015 26.5651C4.0196 31.2084 5.88278 35.6538 9.17982 38.9233C12.4768 42.1928 16.9377 44.0187 21.5809 43.9992Z" fill="url(#paint0_linear_54_931)"/>
                     <linearGradient id="paint0_linear_54_931" x1="19.0266" y1="8.98438" x2="19.0266" y2="43.9994" gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#58AFFF"/>
+                            <stop stop-color="#58AFFF" offset=""/>
                             <stop offset="1" stop-color="#5CD1F7"/>
                     </linearGradient>
                 </svg>
@@ -117,7 +117,7 @@
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M17.8515 32.78H28.6238C29.4356 32.78 30.1089 32.1 30.1089 31.28C30.1089 30.46 29.4356 29.8 28.6238 29.8H17.8515C17.0396 29.8 16.3663 30.46 16.3663 31.28C16.3663 32.1 17.0396 32.78 17.8515 32.78ZM24.5446 19.8H17.8515C17.0396 19.8 16.3663 20.48 16.3663 21.3C16.3663 22.12 17.0396 22.78 17.8515 22.78H24.5446C25.3564 22.78 26.0297 22.12 26.0297 21.3C26.0297 20.48 25.3564 19.8 24.5446 19.8ZM38.6761 18.0512C39.1416 18.0458 39.6484 18.04 40.1089 18.04C40.604 18.04 41 18.44 41 18.94V35.02C41 39.98 37.0198 44 32.1089 44H16.3465C11.198 44 7 39.78 7 34.58V13.02C7 8.06 11 4 15.9307 4H26.5049C27.0198 4 27.4158 4.42 27.4158 4.92V11.36C27.4158 15.02 30.4059 18.02 34.0297 18.04C34.8761 18.04 35.6224 18.0463 36.2754 18.0519C36.7834 18.0562 37.2351 18.06 37.6337 18.06C37.9155 18.06 38.2809 18.0558 38.6761 18.0512ZM39.2222 15.132C37.5945 15.138 35.6756 15.132 34.2954 15.118C32.1053 15.118 30.3014 13.296 30.3014 11.084V5.812C30.3014 4.95 31.337 4.522 31.9291 5.144C33.0009 6.26952 34.4737 7.81668 35.9398 9.35675C37.4019 10.8926 38.8573 12.4215 39.9014 13.518C40.4796 14.124 40.0558 15.13 39.2222 15.132Z" fill="url(#paint0_linear_54_960)"/>
                         <linearGradient id="paint0_linear_54_960" x1="24" y1="4" x2="24" y2="44" gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#FA8C16"/>
+                            <stop stop-color="#FA8C16" offset=""/>
                             <stop offset="1" stop-color="#FFAA2B"/>
                         </linearGradient>
                     </svg>
@@ -130,7 +130,7 @@
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M24.3333 45.9998C34.4586 45.9998 42.6667 37.7917 42.6667 27.6665C42.6667 17.5412 34.4586 9.33313 24.3333 9.33313C14.2081 9.33313 6 17.5412 6 27.6665C6 37.7917 14.2081 45.9998 24.3333 45.9998ZM24.3337 38.6675C30.4088 38.6675 35.3337 33.7426 35.3337 27.6675C35.3337 21.5924 30.4088 16.6675 24.3337 16.6675C18.2586 16.6675 13.3337 21.5924 13.3337 27.6675C13.3337 33.7426 18.2586 38.6675 24.3337 38.6675Z" fill="url(#paint0_linear_54_917)"/>
                     <path d="M23.6236 19.9926C23.872 19.4691 24.5655 19.4691 24.8139 19.9926L26.54 23.6295C26.6392 23.8385 26.8265 23.9824 27.0419 24.0151L30.8614 24.5958C31.4173 24.6803 31.635 25.4216 31.2258 25.8362L28.495 28.6025C28.3302 28.7694 28.2547 29.0148 28.2943 29.2549L28.9429 33.188C29.0396 33.7739 28.4742 34.227 27.9822 33.958L24.5211 32.0649C24.331 31.9609 24.1065 31.9609 23.9164 32.0649L20.4553 33.958C19.9633 34.227 19.3979 33.7739 19.4946 33.188L20.1432 29.2549C20.1828 29.0148 20.1073 28.7694 19.9425 28.6025L17.2117 25.8362C16.8025 25.4216 17.0202 24.6803 17.5761 24.5958L21.3956 24.0151C21.6111 23.9824 21.7983 23.8385 21.8975 23.6295L23.6236 19.9926Z" fill="#002F13"/>
                     <linearGradient id="paint0_linear_54_917" x1="24.3333" y1="9.33313" x2="24.3333" y2="45.9998" gradientUnits="userSpaceOnUse">
-                        <stop stop-color="#46E987"/>
+                        <stop stop-color="#46E987" offset=""/>
                         <stop offset="1" stop-color="#30A960"/>
                     </linearGradient>
                 </svg>
@@ -142,7 +142,7 @@
                     <path d="M24 21.375C27 21.375 28.5 18.5625 28.5 15.0469C28.5 12.2344 27 10.125 24 10.125C21 10.125 19.5 12.2344 19.5 15.0469C19.5 18.5625 21 21.375 24 21.375Z" fill="white"/>
                     <path d="M29.0424 34.2422C30.4138 33.8907 31.5761 32.9721 32.2127 31.7076C32.2216 31.6899 32.2305 31.6721 32.2394 31.6544C32.248 31.6371 32.2567 31.6197 32.2653 31.6023C33.1453 29.8252 32.846 27.6481 31.3444 26.3528C29.3737 24.6529 26.8069 23.625 24.0001 23.625C21.1932 23.625 18.6264 24.6529 16.6557 26.3529C15.1541 27.6481 14.8549 29.8253 15.7349 31.6023C15.7523 31.6375 15.7698 31.6726 15.7874 31.7076C16.424 32.9721 17.5863 33.8907 18.9577 34.2422C20.5697 34.6553 22.2592 34.875 24.0001 34.875C25.7409 34.875 27.4304 34.6553 29.0424 34.2422Z" fill="white"/>
                     <linearGradient id="paint0_linear_54_984" x1="24" y1="2" x2="24" y2="46" gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#08B986"/>
+                            <stop stop-color="#08B986" offset=""/>
                             <stop offset="1" stop-color="#23D884"/>
                     </linearGradient>
                 </svg>
@@ -159,7 +159,7 @@
                     <path d="M37.9982 33.2648C38.1701 33.0929 38.2666 32.8597 38.2666 32.6166V28.95C38.2666 28.2206 37.9769 27.5211 37.4612 27.0054C36.9455 26.4897 36.246 26.2 35.5166 26.2C34.7873 26.2 34.0878 26.4897 33.5721 27.0054C33.0564 27.5211 32.7666 28.2206 32.7666 28.95V32.6166C32.7666 32.8597 32.8632 33.0929 33.0351 33.2648C33.207 33.4367 33.4402 33.5333 33.6833 33.5333H37.35C37.5931 33.5333 37.8262 33.4367 37.9982 33.2648Z" fill="#5880E4"/>
                     <path d="M37.9982 22.2648C38.1701 22.0929 38.2666 21.8597 38.2666 21.6166V17.95C38.2666 17.2206 37.9769 16.5211 37.4612 16.0054C36.9455 15.4897 36.246 15.2 35.5166 15.2C34.7873 15.2 34.0878 15.4897 33.5721 16.0054C33.0564 16.5211 32.7666 17.2206 32.7666 17.95V21.6166C32.7666 21.8597 32.8632 22.0929 33.0351 22.2648C33.207 22.4367 33.4402 22.5333 33.6833 22.5333H37.35C37.5931 22.5333 37.8262 22.4367 37.9982 22.2648Z" fill="#5880E4"/>
                     <linearGradient id="paint0_linear_54_987" x1="24.7" y1="10.8" x2="24.7" y2="46" gradientUnits="userSpaceOnUse">
-                        <stop stop-color="#78E7FC"/>
+                        <stop stop-color="#78E7FC" offset=""/>
                         <stop offset="1" stop-color="#5CD1F7"/>
                     </linearGradient>
                 </svg>
@@ -183,11 +183,11 @@
                     <path d="M8.57153 8.8638C8.57153 8.18556 9.02665 7.5917 9.68157 7.41538L28.9673 2.22307C29.9204 1.96647 30.8572 2.68446 30.8572 3.67149V44.3284C30.8572 45.3154 29.9204 46.0334 28.9673 45.7768L9.68157 40.5845C9.02665 40.4082 8.57153 39.8143 8.57153 39.1361V8.8638Z" fill="url(#paint1_linear_54_1002)"/>
                     <rect x="25.7144" y="20.5714" width="1.71428" height="6.85714" rx="0.857142" fill="white"/>
                         <linearGradient id="paint0_linear_54_1002" x1="23.9999" y1="6.85718" x2="23.9999" y2="41.1429" gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#7691F9"/>
+                            <stop stop-color="#7691F9" offset=""/>
                             <stop offset="1" stop-color="#3A5DE0"/>
                         </linearGradient>
                         <linearGradient id="paint1_linear_54_1002" x1="30.8572" y1="4.28566" x2="11.1232" y2="40.8073" gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#46E987"/>
+                            <stop stop-color="#46E987" offset=""/>
                             <stop offset="1" stop-color="#30A960"/>
                         </linearGradient>
                     </svg>
