--- a/components/vi/content-1.html
+++ b/components/vi/content-1.html
@@ -41,13 +41,13 @@
                     </svg>
                     <p>Dịch vụ 5 sao với đội ngũ Việt Nam hỗ trợ nhiệt tình 24/7</p>
                 </div>
-                <button class="font-bold font-button py-3 w-full rounded-xl bg-primary text-white mt-3 xl:mt-5 xl:text-xl xl:leading-10 xl:py-2 lg:w-[239px] hover:bg-dark-primary">
+                <button class="button-modal font-bold font-button py-3 w-full rounded-xl bg-primary text-white mt-3 xl:mt-5 xl:text-xl xl:leading-10 xl:py-2 lg:w-[239px] hover:bg-dark-primary">
                     Liên hệ đăng ký
                 </button>
             </div>
         </div>
         <figure class="relative mt-4 md:mt-10 lg:mt-0 lg:col-span-7 xl:col-span-7 md:translate-x-1/12">
-            <img src="/images/content-1/image-content-1.png" alt="Gapo Work" class="md:max-w-[680px] xl:max-w-[780px] md:object-contain"/>
+            <img src="/images/content-1/image-content-1.png" alt="Gapo Work" class="md:max-w-[680px] lg:max-w-[580px] xl:max-w-[780px] md:object-contain"/>
         </figure>
     </div>
 </section>
