feat: fix font-size

--- a/components/en/footer.html
+++ b/components/en/footer.html
@@ -9,7 +9,7 @@
                     <img src="/images/playstore.png" class="lg:w-[186px] lg:h-[55px]" alt="Play Store"/>
                 </a>
                 <a>
-                    <img src="/images/appstore.png" class="lg:w-[186px] lg:h-[55px]" alt="App Store"/>
+                    <img src="/images/playstore.svg" class="lg:w-[186px] lg:h-[55px]" alt="App Store"/>
                 </a>
             </div>
         </div>
