--- a/components/vi/footer.html
+++ b/components/vi/footer.html
@@ -1,19 +1,19 @@
-<section class="relative bg-dark-blue py-10 lg:rounded-t-[64px] lg:pt-40 lg:pb-6">
-    <div class="mx-auto container px-4 lg:px-0 text-white grid md:grid-cols-12 md:gap-[30px]">
-        <h2 class=" font-heading text-2xl md:text-3xl lg:text-[40px] lg:leading-[64px] md:col-span-7">Thu hẹp khoảng cách,<br/> mở rộng tầm nhìn
+<section class="relative bg-dark-blue py-10 lg:pt-20 xl:rounded-t-[64px] xl:pt-40 lg:pb-6">
+    <div class="mx-auto container px-4 lg:px-8 text-white grid xl:px-0 md:grid-cols-12 md:gap-[30px]">
+        <h2 class=" font-heading text-2xl md:text-3xl xl:text-[40px] xl:leading-[64px] md:col-span-6 xl:col-span-7">Thu hẹp khoảng cách,<br/> mở rộng tầm nhìn
             cùng GapoWork</h2>
-        <div class="md:col-span-5 md:row-span-2 md:place-self-center">
-            <img src="/images/footer-image.png" class="mt-6  w-full h-auto lg:w-[390px] lg:mt-0 lg:h-[234px] " alt="Gapo Work"/>
-            <div class="flex gap-4 mt-7">
+        <div class="md:col-span-6 xl:col-span-5 md:row-span-2 md:place-self-center">
+            <img src="/images/footer-image.png" class="mt-6  w-full h-auto xl:w-[390px] lg:mt-0 xl:h-[234px] " alt="Gapo Work"/>
+            <div class="flex justify-center gap-4 mt-7">
                 <a>
-                    <img src="/images/playstore.png" class="lg:w-[186px] lg:h-[55px]" alt="Play Store"/>
+                    <img src="/images/playstore.svg" class="xl:w-[186px] xl:h-[55px]" alt="Play Store"/>
                 </a>
                 <a>
-                    <img src="/images/appstore.png" class="lg:w-[186px] lg:h-[55px]" alt="App Store"/>
+                    <img src="/images/appstore.svg" class="xl:w-[186px] xl:h-[55px]" alt="App Store"/>
                 </a>
             </div>
         </div>
-        <div class="flex flex-col mt-6 gap-6 md:flex-row md:mt-0 md:col-span-7 md:items-center md:gap-14">
+        <div class="flex flex-col mt-6 gap-6 md:flex-row md:mt-0 md:col-span-6 xl:col-span-7 md:items-center lg:gap-10">
             <div class="flex gap-6 items-center">
                 <img src="/images/sao-khue.png" class="w-11 h-[128px]" alt="Sao Khue Award"/>
                 <div class="flex flex-col gap-3 ">
