--- a/components/vi/content-2.html
+++ b/components/vi/content-2.html
@@ -1,7 +1,7 @@
 <section class="bg-light-blue w-screen ">
-    <div class="mx-auto container px-5 text-content py-10 lg:pt-20 lg:pb-32 xl:px-0">
+    <div class="mx-auto container px-5 text-content py-10 lg:10 xl:pt-20 xl:pb-32 xl:px-0">
         <h2 class="text-center font-heading font-bold text-2xl xl:text-5xl xl:leading-normal">Tính năng nổi bật</h2>
-        <div class="grid grid-cols-4 gap-x-3 gap-y-8 mt-6 md:grid-cols-6 md:gap-x-8 md:gap-y-6 md:mt-10 lg:mt-14 lg:grid-cols-9 lg:gap-x-10 lg:gap-y-8">
+        <div class="grid grid-cols-4 gap-x-3 gap-y-8 mt-6 md:grid-cols-6 md:gap-x-8 md:gap-y-6 md:mt-10 lg:mt-14 lg:grid-cols-9 lg:gap-x-5 lg:gap-y-8 xl:gap-x-10 xl:gap-y-8">
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M33.3961 5.64654C33.3961 5.09769 33.4401 4.54885 33.5279 4H15.8572C8.39066 4 3.99988 8.43469 3.99988 15.899V32.1427C3.99988 39.5873 8.39066 44 15.8572 44H32.0789C39.5432 44 43.934 39.5873 43.934 32.1427V14.4281C43.3852 14.5159 42.8583 14.5796 42.3094 14.5796C37.3918 14.5796 33.3961 10.5862 33.3961 5.64654Z" fill="url(#paint0_linear_54_849)"/>
