--- a/components/vi/content-3-mb.html
+++ b/components/vi/content-3-mb.html
@@ -1,7 +1,7 @@
-<section class="block xl:hidden pt-10 text-content leading-6 md:container md:mx-auto">
+<section class="block lg:hidden pt-10 text-content leading-6 md:container md:mx-auto">
     <div class="flex flex-col items-center gap-5 px-5">
         <span class="w-[217px] bg-light-red text-center text-red py-1 px-3 rounded-xl text-sm leading-6 md:w-[317px] md:text-lg md:py-3 md:px-6">Meta Workplace sẽ đóng cửa vào <strong>tháng 8/2025</strong></span>
-        <h2 class="font-bold text-2xl text-center md:text-3xl md:leading-normal">Tại sao chọn GapoWork thay thế
+        <h2 class="page-heading">Tại sao chọn GapoWork thay thế
             Workplace?</h2>
     </div>
     <div class="flex items-center gap-4 mt-5 px-5">
