--- a/components/vi/content-3-pc.html
+++ b/components/vi/content-3-pc.html
@@ -1,8 +1,9 @@
-<section class="hidden xl:block pt-32 py-36 container mx-auto">
+<section class="hidden lg:block pt-32 py-36 container mx-auto">
 
     <div class="flex flex-col items-center gap-6">
         <span class="bg-light-red text-red py-3 px-6 rounded-xl text-xl leading-6">Meta Workplace sẽ đóng cửa vào <strong>tháng 8/2025</strong></span>
-        <h2 class="font-bold text-5xl leading-normal">Tại sao chọn GapoWork thay thế Workplace?</h2>
+        <h2 class="page-heading">Tại sao chọn GapoWork thay thế
+            Workplace?</h2>
     </div>
 
     <!--row 1 -->
