--- a/components/vi/content-4.html
+++ b/components/vi/content-4.html
@@ -1,7 +1,7 @@
 <section class="relative bg-dark-blue py-10 lg:rounded-[64px] lg:pt-[72px] lg:pb-[93px]">
     <div class="container w-full mx-auto grid content-center px-5 lg:gap-x-4 lg:grid-cols-12 xl:gap-x-6 xl:px-0">
         <div class="font-content flex flex-col justify-center mt-6 order-2 lg:mt-0 lg:order-1 lg:col-span-6 ">
-            <h2 class="font-heading text-white text-2xl font-bold xl:tracking-[.03em] md:text-3xl xl:text-5xl xl:leading-[56px]">
+            <h2 class="page-heading">
                 Chuyển đổi từ Workplace sang GapoWork nhanh gọn và thuận tiện
             </h2>
             <div class="flex flex-col mt-6 text-white text-sm gap-3 xl:gap-5 xl:text-base">
