--- a/components/en/content-1.html
+++ b/components/en/content-1.html
@@ -40,7 +40,7 @@
                     </svg>
                     <p>5-star service with a dedicated Vietnamese support team available 24/7</p>
                 </div>
-                <button class="button-modal font-bold font-button py-3 w-full rounded-xl bg-primary text-white mt-3 xl:mt-5 xl:text-xl xl:leading-10 xl:py-2 lg:w-[239px] hover:bg-dark-primary">
+                <button type="button" class="button-modal font-bold font-button py-3 w-full rounded-xl bg-primary text-white mt-3 xl:mt-5 xl:text-xl xl:leading-10 xl:py-2 lg:w-[239px] hover:bg-dark-primary">
                     Contact to register
                 </button>
             </div>
