feat: Update Form

--- a/components/en/content-4.html
+++ b/components/en/content-4.html
@@ -6,7 +6,7 @@
             </h2>
             <div class="flex flex-col mt-6 text-white text-sm gap-3 xl:gap-5 xl:text-base">
                 <p>Kèm dịch vụ triển khai bổ sung mà không mất thêm phí để hỗ trợ<br> quá trình chuyển đổi của khách hàng.</p>
-                <button class="font-bold font-button py-3 w-full rounded-xl bg-primary text-white mt-3 xl:mt-5 xl:text-xl xl:leading-10 xl:py-2 lg:w-[239px] hover:bg-dark-primary">
+                <button type="button" class="font-bold font-button py-3 w-full rounded-xl bg-primary text-white mt-3 xl:mt-5 xl:text-xl xl:leading-10 xl:py-2 lg:w-[239px] hover:bg-dark-primary">
                     Chuyển đổi ngay
                 </button>
             </div>
