--- a/components/en/modal.html
+++ b/components/en/modal.html
@@ -46,7 +46,7 @@
                     <p>Quy mô <span class="text-form-red">*</span></p>
                     <input id="scaleInput" class="rounded-xl bg-form-gray border border-form-gray h-12 w-full" type="text"/>
                 </label>
-                <button class="rounded-xl col-span-2 w-full py-3 bg-primary text-white mt-2">Gửi thông tin</button>
+                <button type="button" class="rounded-xl col-span-2 w-full py-3 bg-primary text-white mt-2">Gửi thông tin</button>
             </form>
         </div>
     </div>
