--- a/components/vi/content-3-pc.html
+++ b/components/vi/content-3-pc.html
@@ -7,7 +7,7 @@
     </div>
 
     <!--row 1 -->
-    <div class="grid grid-cols-table mt-24 border-b border-[#E9E9EA]">
+    <div class="row-table mt-24 ">
         <!--col 1 -->
         <div class="flex flex-col justify-end items-center gap-[18px] pb-[22px]">
             <label>SO SÁNH NỀN TẢNG</label>
@@ -35,10 +35,10 @@
     <!--end row 1 -->
 
     <!--row 2 -->
-    <div class="grid grid-cols-table border-b border-[#E9E9EA]">
+    <div class="row-table">
         <!--col 1 -->
         <div class="p-6">
-            <div class="flex gap-4 font-bold">
+            <div class="col-1-table">
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_54_1111)">
                         <rect width="40" height="40" rx="12" fill="#3AB67B"/>
@@ -90,7 +90,7 @@
 
         <!--col 3 -->
         <div class="flex flex-col text-[15px] leading-6 gap-y-3 py-8 px-11">
-            <p class="text-lg"><strong>Core Plan~100.000 VNĐ/người/tháng <br/> Add-on từ 50.000 VNĐ/USER/ tháng</strong></p>
+            <p class="text-lg leading-[30px]"><strong>Core Plan~100.000 VNĐ/người/tháng <br/> Add-on từ 50.000 VNĐ/USER/ tháng</strong></p>
             <p>Workplace là công cụ giao tiếp dành cho doanh nghiệp, hỗ trợ các tổ chức duy trì sự kết nối.</p>
             <div class="flex gap-1">
                 <svg class="xl:w-6" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -114,10 +114,10 @@
     <!--end row 2 -->
 
     <!--row 3 -->
-    <div class="grid grid-cols-table bg-light-blue border-b border-[#E9E9EA]">
+    <div class="row-table bg-light-blue ">
         <!--col 1 -->
         <div class="p-6">
-            <div class="flex gap-4 font-bold">
+            <div class="col-1-table">
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_54_1146)">
                         <rect width="40" height="40" rx="12" fill="#FF701F"/>
@@ -337,10 +337,10 @@
     <!--end row 3 -->
 
     <!--row 4 -->
-    <div class="grid grid-cols-table border-b border-[#E9E9EA]">
+    <div class="row-table">
         <!--col 1 -->
         <div class="p-6">
-            <div class="flex gap-4 font-bold">
+            <div class="col-1-table">
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_54_1269)">
                         <rect width="40" height="40" rx="12" fill="#9966F5"/>
@@ -502,7 +502,7 @@
         <!--col 3 -->
         <div class="flex flex-col text-[15px] leading-6  gap-y-3 py-8 px-11">
             <p>Giao tiếp trong tổ chức thông qua công cụ Nhắn tin thời gian thực, kết nối các thành viên trong tổ chức</p>
-            <div class="flex gap-1 mt-6">
+            <div class="flex gap-1 xl:mt-6">
                 <svg class="xl:w-6" width="24" height="24" viewBox="0 0 24 24" fill="none"
                      xmlns="http://www.w3.org/2000/svg">
                     <path d="M8.11256 17.6949C7.4028 16.8975 6.82946 16.1175 6.27563 15.3621C5.76955 14.6752 5.33074 13.9412 4.96526 13.1703C4.73651 12.7025 4.63526 12.2288 5.13075 11.9243C6.55076 11.0516 6.84176 11.8849 7.61359 12.8517C8.07109 13.4246 8.74571 14.3693 9.16841 14.9662C9.57218 15.5362 10.0644 14.5074 10.2609 14.2171C10.9593 13.1855 12.7745 10.6598 13.5246 9.72617C14.2367 8.8399 16.5353 6.35702 16.9638 5.96211C17.3285 5.62585 18.0986 4.8883 18.6164 5.29517C19.1606 5.72267 19.4264 6.5353 19.0439 7.06367C18.3777 7.98355 17.3314 8.85861 16.6074 9.7345C15.1418 11.5075 13.7543 13.4186 12.4224 15.3215C11.9698 15.9682 11.3343 17.0512 10.9398 17.7525C10.2019 19.0645 9.55369 19.3141 8.11256 17.6949Z"
@@ -629,10 +629,10 @@
     <!--end row 4 -->
 
     <!--row 5 -->
-    <div class="grid grid-cols-table">
+    <div class="grid lg:grid-cols-table-lg xl:grid-cols-table-xl">
         <!--col 1 -->
         <div class="p-6">
-            <div class="flex gap-4 items-center font-bold">
+            <div class="col-1-table">
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_54_1269)">
                         <rect width="40" height="40" rx="12" fill="#9966F5"/>
