--- a/components/vi/header.html
+++ b/components/vi/header.html
@@ -11,7 +11,11 @@
     </svg>
 
 
-    <button class="button-modal flex items-center bg-primary rounded-lg lg:rounded-xl hover:bg-dark-primary">
+    <button type="button"
+            data-modal-trigger
+            aria-controls="modal-form"
+            aria-expanded="false"
+            class="button-modal flex items-center bg-primary rounded-lg lg:rounded-xl hover:bg-dark-primary">
         <span class="text-white mx-3 my-1.5 md:mx-4 md:my-0">Liên hệ đăng ký</span>
         <span class="hidden sm:block sm:p-2.5 sm:bg-white sm:m-1 sm:rounded-lg">
             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
