--- a/components/en/content-5.html
+++ b/components/en/content-5.html
@@ -8,7 +8,7 @@
             <h2 class="font-heading text-black text-2xl font-bold md:text-3xl xl:text-[40px] xl:leading-[64px]">
                 <span class="text-primary">83% khách hàng</span> đồng ý rằng GapoWork thúc đẩy hoạt động truyền thông của lãnh đạo.
             </h2>
-            <button class="font-bold font-button py-3 w-full rounded-xl bg-primary text-white mt-3 lg:mt-5 lg:text-xl lg:leading-10 lg:py-2 lg:w-[239px] hover:bg-dark-primary">
+            <button type="button" class="font-bold font-button py-3 w-full rounded-xl bg-primary text-white mt-3 lg:mt-5 lg:text-xl lg:leading-10 lg:py-2 lg:w-[239px] hover:bg-dark-primary">
                 Chuyển đổi ngay
             </button>
         </div>
