--- a/components/en/header.html
+++ b/components/en/header.html
@@ -1,6 +1,6 @@
 <header class="bg-white flex items-center justify-between py-2 px-3 drop-shadow md:py-3 md:px-8 lg:py-4 xl:px-16 ">
     <img src="/images/logo/logo.png" alt="Gapo Work" class="md:w-[166px] md:h-[33px]"/>
-    <button class="button-modal flex items-center bg-primary rounded-lg lg:rounded-xl hover:bg-dark-primary">
+    <button type="button" class="button-modal flex items-center bg-primary rounded-lg lg:rounded-xl hover:bg-dark-primary">
         <span class="text-white mx-3 my-1.5 md:mx-4 md:my-0">Contact to register</span>
         <span class="hidden sm:block sm:p-2.5 sm:bg-white sm:m-1 sm:rounded-lg">
             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
