--- a/components/vi/footer.html
+++ b/components/vi/footer.html
@@ -1,8 +1,8 @@
 <section class="relative bg-dark-blue py-10 lg:pt-20 xl:rounded-t-[64px] xl:pt-40 lg:pb-6">
-    <div class="mx-auto container px-4 lg:px-8 text-white grid xl:px-0 md:grid-cols-12 md:gap-[30px]">
-        <h2 class=" font-heading text-2xl md:text-3xl xl:text-[40px] xl:leading-[64px] md:col-span-6 xl:col-span-7">Thu hẹp khoảng cách,<br/> mở rộng tầm nhìn
+    <div class="mx-auto container px-4 lg:px-8 text-white grid xl:px-0 lg:grid-cols-12 md:gap-[30px]">
+        <h2 class=" font-heading text-2xl md:text-3xl xl:text-[40px] xl:leading-[64px] lg:col-span-6 xl:col-span-7">Thu hẹp khoảng cách,<br/> mở rộng tầm nhìn
             cùng GapoWork</h2>
-        <div class="md:col-span-6 xl:col-span-5 md:row-span-2 md:place-self-center">
+        <div class="md:order-3 lg:order-none lg:col-span-6 xl:col-span-5 md:row-span-2 md:place-self-center">
             <img src="/images/footer-image.png" class="mt-6  w-full h-auto xl:w-[390px] lg:mt-0 xl:h-[234px] " alt="Gapo Work"/>
             <div class="flex justify-center gap-4 mt-7">
                 <a>
@@ -13,7 +13,7 @@
                 </a>
             </div>
         </div>
-        <div class="flex flex-col mt-6 gap-6 md:flex-row md:mt-0 md:col-span-6 xl:col-span-7 md:items-center lg:gap-10">
+        <div class="flex flex-col mt-6 gap-6 md:flex-row md:mt-0 lg:col-span-6 xl:col-span-7 md:items-center lg:gap-10">
             <div class="flex gap-6 items-center">
                 <img src="/images/sao-khue.png" class="w-11 h-[128px]" alt="Sao Khue Award"/>
                 <div class="flex flex-col gap-3 ">
@@ -29,6 +29,6 @@
                 </div>
             </div>
         </div>
-        <p class="mt-10 md:col-span-12 text-left md:text-center text-[15px] leading-5 opacity-80 lg:mt-28">© 2024. Công ty Cổ phần Công nghệ Gapo.</p>
+        <p class="mt-10 md:order-last lg:order-none lg:col-span-12 text-left md:text-center text-[15px] leading-5 opacity-80 lg:mt-28">© 2024. Công ty Cổ phần Công nghệ Gapo.</p>
     </div>
 </section>
