--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
         @apply font-bold py-3 w-full rounded-xl bg-primary text-white mt-3 text-base md:mt-5 md:w-[239px] md:text-xl lg:leading-10 xl:py-2 hover:bg-dark-primary
     }
     .input-form{
-       @apply rounded-xl bg-form-gray border border-form-gray h-12 w-full py-1 px-3
+       @apply rounded-xl bg-form-gray border border-form-gray h-12 w-full py-1 px-3 font-medium
     }
 }
 
